Added a commento css override

--- a/themes/m10c/layouts/_default/single.html
+++ b/themes/m10c/layouts/_default/single.html
@@ -27,7 +27,11 @@
       {{ .Content }}
     </div>
     <div class="post-footer">
-      <script defer src="https://commento.rogs.me/js/commento.js"></script>
+      <script defer
+              src="https://commento.rogs.me/js/commento.js"
+              data-css-override="/commento-new.css"
+              data-auto-init="true">
+      </script>
       <div id="commento"></div>
     </div>
   </article>
