--- a/themes/m10c/layouts/_default/baseof.html
+++ b/themes/m10c/layouts/_default/baseof.html
@@ -10,6 +10,7 @@
     {{ $style := resources.Get "css/main.scss" | resources.ExecuteAsTemplate "css/main.scss" . | resources.ToCSS | resources.Minify | resources.Fingerprint -}}
     <link rel="stylesheet" href="{{ $style.Permalink }}" />
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+    <script src="https://kit.fontawesome.com/0460fae059.js" crossorigin="anonymous"></script>
 
     {{ template "_internal/google_analytics.html" . }}
     {{ template "_internal/twitter_cards.html" . }}
@@ -41,13 +42,19 @@
       <p>{{ .Site.Params.description | default "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vehicula turpis sit amet elit pretium." }}</p>
       <div class="app-header-social">
         {{ range .Site.Params.social }}
-          <a target="_blank" href="{{ .url }}" rel="noreferrer noopener">{{ partial "icon.html" (dict "ctx" $ "name" .name ) }}</a>
+        <a target="_blank" href="{{ .url }}" rel="noreferrer noopener"><i class="{{ .name }}"></i></a>
+        {{ end }}
+      </div>
+      <p>Donations:</p>
+      <div class="app-header-social">
+        {{ range .Site.Params.donations }}
+        <a target="_blank" href="{{ .url }}" rel="noreferrer noopener"><i class="{{ .name }}"></i></a>
         {{ end }}
       </div>
     </header>
     <main class="app-container">
       {{ block "main" . }}
-        {{ .Content }}
+      {{ .Content }}
       {{ end }}
     </main>
   </body>
