Changed linkedin icon, lowercased donations text

--- a/themes/m10c/layouts/_default/baseof.html
+++ b/themes/m10c/layouts/_default/baseof.html
@@ -45,7 +45,7 @@
         <a target="_blank" href="{{ .url }}" rel="noreferrer noopener"><i class="{{ .name }}"></i></a>
         {{ end }}
       </div>
-      <p>Donations:</p>
+      <p>donations:</p>
       <div class="app-header-social">
         {{ range .Site.Params.donations }}
         <a target="_blank" href="{{ .url }}" rel="noreferrer noopener"><i class="{{ .name }}"></i></a>
