--- a/themes/archie/layouts/partials/footer.html
+++ b/themes/archie/layouts/partials/footer.html
@@ -8,10 +8,7 @@
 
 | Built with <a href="https://gohugo.io">Hugo</a> |
 
-
-{{- range $index, $key := .Site.Params.donations -}}
-<a class="soc" href="{{ $key.url }}" title="{{ $key.name }}"><i class="{{ $key.name }}"></i></a>|
-{{- end -}}
+<p><i class="fab fa-bitcoin"></i> 1Khw3ZZzNBB6VNKetiPABykVLSNQ6f1hSs <i class="fab fa-ethereum"></i> 0xC07F44811778FE05BAD0e16DF002f0F9B83A3A24</p>
 
 </footer>
 {{ if not .Site.IsServer }}
