Added missing pipe

--- a/themes/archie/layouts/partials/footer.html
+++ b/themes/archie/layouts/partials/footer.html
@@ -3,7 +3,7 @@
 {{- range $index, $key := .Site.Params.Social -}}
 <a class="soc" href="{{ $key.url }}" title="{{ $key.name }}"><i class="{{ $key.name }}"></i></a>|
 {{- end -}}
-<a href="rogs-gpg.txt" target="_blank">gpg</a>
+<a href="rogs-gpg.txt" target="_blank">gpg</a>|
 
 ⚡️
 
