Added btc and xmr qr codes

--- a/themes/archie/layouts/partials/footer.html
+++ b/themes/archie/layouts/partials/footer.html
@@ -13,8 +13,8 @@
 <p style="font-size:12px">gpg: <code>curl -sL https://rogs.me/rogs.txt | gpg --import</code></p>
 <p style="font-size:12px">fingerprint: <code>ADDF BCB7 8B86 8D93 FC4E 3224 C7EC E9C6 C36E C2E6</code></p>
 
-<p><i class="fab fa-bitcoin"></i> <span style="font-size:10px">bc1q8yrnatx40n9ts4mzqmkh2p65mys6mvs45us3kq</span></p>
-<p><i class="fab fa-monero"></i> <span style="font-size:10px">88zqmA2HLiA59CMVfV5FRrPmC64hcB6FTSXR95dugjso8X9jeHwZqfBMhiGREmdQHgB5kAy3EwygAikoVY6hexGKTBQEQEg</span></p>
+<p><a href="btc.png"><i class="fab fa-bitcoin"></i> <span style="font-size:10px">bc1q8yrnatx40n9ts4mzqmkh2p65mys6mvs45us3kq</span></a></p>
+<p><a href="xmr.png"><i class="fab fa-monero"></i> <span style="font-size:10px">88zqmA2HLiA59CMVfV5FRrPmC64hcB6FTSXR95dugjso8X9jeHwZqfBMhiGREmdQHgB5kAy3EwygAikoVY6hexGKTBQEQEg</span></a></p>
 
 
 </footer>
