--- a/themes/archie/layouts/_default/single.html
+++ b/themes/archie/layouts/_default/single.html
@@ -4,6 +4,7 @@
 		<div class="title">
 			<h1 class="title">{{ .Title }}</h1>
 			<div class="meta">Posted on {{ dateFormat "Jan 2, 2006" .Date }}{{ if .Draft }} <span class="draft-label">DRAFT</span> {{ end }}</div>
+			<div class="meta">Last updated on {{ dateFormat "Jan 2, 2006" .Lastmod }}</div>
 		</div>
 		{{ if isset .Params "tldr" }}
 		<div class="tldr">
