--- a/themes/archie/static/css/main.css
+++ b/themes/archie/static/css/main.css
@@ -9,7 +9,7 @@
 html {
   color: #232333;
   font-family: 'Roboto Mono', monospace;
-  font-size: 15px;
+  font-size: 14px;
   line-height: 1.6em;
 }
 body{
@@ -290,4 +290,21 @@ color: royalblue ;
 content: 'Markdown';
 background: royalblue;
 color: whitesmoke ;
+}
+.title .meta {
+  color: grey;
+  font-size: 12px;
+}
+#artlist .artlist-date {
+  color: grey;
+}
+dd a {
+  border-bottom: 0px;
+}
+dd a:hover {
+    background-color: transparent;
+    color: #fff;
+}
+dd a img {
+  border: 0px;
 }
