--- a/themes/archie/layouts/_default/list.html
+++ b/themes/archie/layouts/_default/list.html
@@ -9,7 +9,7 @@
 	{{- range .Data.Pages -}}
 		{{- if (not (in (.Site.Params.excludedTypes | default (slice "page")) .Type)) -}}
 		<li class="post">
-			<a href="{{ .RelPermalink }}">{{.Title}}</a> <span class="meta">{{ dateFormat "Jan 2, 2006" .Date }}{{ if .Draft }} <span class="draft-label">DRAFT</span> {{ end }}</span>
+			<span class="meta">{{ dateFormat "02 Jan 2006" .Date }}</span> - <a href="{{ .RelPermalink }}">{{.Title}}</a>
 		</li>
 		{{- end -}}
 	{{- end -}}
