Removed empty tags

--- a/themes/archie/layouts/_default/single.html
+++ b/themes/archie/layouts/_default/single.html
@@ -21,7 +21,7 @@
 			<nav class="nav tags">
 				<ul class="tags">
 					{{ range .Params.tags }}
-					<li><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a></li>
+					{{- if . -}}<li><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a></li>{{ end }}
 					{{ end }}
 				</ul>
 			</nav>
