--- a/themes/archie/layouts/_default/single.html
+++ b/themes/archie/layouts/_default/single.html
@@ -3,8 +3,10 @@
 	<article>
 		<div class="title">
 			<h1 class="title">{{ .Title }}</h1>
+			{{ if .InSection (.Site.GetPage "posts") }}
 			<div class="meta">Posted on {{ dateFormat "Jan 2, 2006" .Date }}{{ if .Draft }} <span class="draft-label">DRAFT</span> {{ end }}</div>
 			<div class="meta">Last updated on {{ dateFormat "Jan 2, 2006" .Lastmod }}</div>
+			{{ end }}
 		</div>
 		{{ if isset .Params "tldr" }}
 		<div class="tldr">
