Changed webrings wording

--- a/layouts/shortcodes/webring.html
+++ b/layouts/shortcodes/webring.html
@@ -1,5 +1,5 @@
 <aside>
-	<p>Webrings! Like the 90s!</p>
+	<p>Webrings! Check em out!</p>
     {{- range $index, $key := .Site.Params.Webring -}}
 	<p>
         <a href="{{ $key.prevUrl }}">&lt;-</a>
