--- a/themes/archie/static/css/main.css
+++ b/themes/archie/static/css/main.css
@@ -333,3 +333,16 @@ aside {
   border: 1px solid var(--darkMaincolor);
   text-align: center;
 }
+.icons {
+  border-bottom: 0px;
+  margin: 0px 5px 0px 5px;
+}
+.icons:hover {
+  background-color: transparent;
+}
+.icons img {
+  color: white;
+  width: 14px;
+  border: 0px transparent;
+  filter: invert(100%) sepia(86%) saturate(84%) hue-rotate(100deg) brightness(111%) contrast(101%);
+}
