--- a/themes/archie/layouts/partials/header.html
+++ b/themes/archie/layouts/partials/header.html
@@ -35,6 +35,8 @@
 	{{- template "_internal/twitter_cards.html" . -}}
     <link href="{{ .Site.BaseURL }}css/fonts.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" media="screen" href="{{ .Site.BaseURL }}css/main.css" />
+	<!-- Indielogin -->
+	<link href="/rogs.txt" rel="pgpkey authn">
 	{{- if or (eq .Site.Params.mode "auto") (eq .Site.Params.mode "dark") -}}
 		<link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/dark.css" {{ if eq .Site.Params.mode "auto" }}media="(prefers-color-scheme: dark)"{{ end }} />
 	{{ end }}
