Fixed icons in crypto donations

--- a/layouts/shortcodes/crypto.html
+++ b/layouts/shortcodes/crypto.html
@@ -1,2 +1,2 @@
-<p><a href="{{ "btc.png" | relURL }}"><i class="fab fa-bitcoin"></i> <span>bc1q8yrnatx40n9ts4mzqmkh2p65mys6mvs45us3kq</span></a></p>
-<p><a href="{{ "xmr.png" | relURL }}"><i class="fab fa-monero"></i> <span>88zqmA2HLiA59CMVfV5FRrPmC64hcB6FTSXR95dugjso8X9jeHwZqfBMhiGREmdQHgB5kAy3EwygAikoVY6hexGKTBQEQEg</span></a></p>
+<p>btc: <a href="{{ "btc.png" | relURL }}"><span>bc1q8yrnatx40n9ts4mzqmkh2p65mys6mvs45us3kq</span></a></p>
+<p>xmr: <a href="{{ "xmr.png" | relURL }}"><span>88zqmA2HLiA59CMVfV5FRrPmC64hcB6FTSXR95dugjso8X9jeHwZqfBMhiGREmdQHgB5kAy3EwygAikoVY6hexGKTBQEQEg</span></a></p>
