--- a/layouts/shortcodes/personal-projects.html
+++ b/layouts/shortcodes/personal-projects.html
@@ -4,7 +4,7 @@
 <dd>{{ $key.description }}&nbsp
     {{- if $key.rogsgit -}}<a class="personal-projects" href="{{ $key.rogsgit }}"><img src="/cgit-small.png"/></a> {{- end -}}
     {{- if $key.gitlab -}}<a class="personal-projects" href="{{ $key.gitlab }}"><img src="/gitlab-small.png"/></a> {{- end -}}
-    {{- if $key.github -}}<a class="personal-projects"href="{{ $key.github }}"><img src="/github-small.png"/></a> {{- end -}}
+    {{- if $key.github -}}<a class="personal-projects"href="{{ $key.github }}"><img class="github-img" src="/github-small.png"/></a> {{- end -}}
 </dd>
 {{- end -}}
 </dl>
