--- a/themes/archie/static/css/main.css
+++ b/themes/archie/static/css/main.css
@@ -346,3 +346,6 @@ aside {
   border: 0px transparent;
   filter: invert(100%) sepia(86%) saturate(84%) hue-rotate(100deg) brightness(111%) contrast(101%);
 }
+.github-img {
+  filter: invert(100%);
+}
