--- a/layouts/shortcodes/personal-projects.html
+++ b/layouts/shortcodes/personal-projects.html
@@ -2,9 +2,9 @@
 {{- range $index, $key := .Site.Params.Projects.Personal -}}
 <dt><a href="{{ $key.url }}">{{ $key.name }}</a></dt>
 <dd>{{ $key.description }}&nbsp
-    {{- if $key.rogsgit -}}<a class="personal-projects" href="{{ $key.rogsgit }}"><img src="/cgit-small.png"/></a> {{- end -}}
-    {{- if $key.gitlab -}}<a class="personal-projects" href="{{ $key.gitlab }}"><img src="/gitlab-small.png"/></a> {{- end -}}
-    {{- if $key.github -}}<a class="personal-projects"href="{{ $key.github }}"><img class="github-img" src="/github-small.png"/></a> {{- end -}}
+    {{- if $key.gitea -}}<a target="_blank" class="personal-projects"href="{{ $key.gitea }}"><img src="/gitea-small.png"/></a> {{- end -}}
+    {{- if $key.gitlab -}}<a target="_blank" class="personal-projects" href="{{ $key.gitlab }}"><img src="/gitlab-small.png"/></a> {{- end -}}
+    {{- if $key.github -}}<a target="_blank" class="personal-projects"href="{{ $key.github }}"><img class="github-img" src="/github-small.png"/></a> {{- end -}}
 </dd>
 {{- end -}}
 </dl>
