--- a/themes/archie/layouts/partials/header.html
+++ b/themes/archie/layouts/partials/header.html
@@ -37,9 +37,13 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="{{ .Site.BaseURL }}css/main.css" />
 	<!-- Indielogin -->
 	<link href="/rogs.txt" rel="pgpkey authn">
-	{{- if or (eq .Site.Params.mode "auto") (eq .Site.Params.mode "dark") -}}
-		<link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/dark.css" {{ if eq .Site.Params.mode "auto" }}media="(prefers-color-scheme: dark)"{{ end }} />
-	{{ end }}
+	<link id="dark-css" rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/dark.css" />
+	<script>
+	(function(){
+	  var d=document.getElementById('dark-css');
+	  if(localStorage.getItem('theme')!=='dark') d.disabled=true;
+	})();
+	</script>
 	<!-- Custom CSS style get applied last -->
 	{{- if isset .Site.Params "customcss" }}
 		{{ range .Site.Params.customCSS }}
