Update dark mode icon filtering and code block background
- Apply filter to icons in dark mode to improve visibility
- Adjust code block background color for better contrast in light mode
- Remove redundant filter styles from icon and github-img elements
- Consolidate icon styling to single rule in dark.css

--- a/themes/archie/static/css/dark.css
+++ b/themes/archie/static/css/dark.css
@@ -126,6 +126,9 @@ aside {
 .highlight {
   background-color: #333;
 }
+.icons img {
+  filter: invert(100%) sepia(86%) saturate(84%) hue-rotate(100deg) brightness(111%) contrast(101%);
+}
 .soc {
   padding-left: 10px;
   padding-right: 10px;
