Use theme color variable for selection background

--- a/themes/archie/static/css/dark.css
+++ b/themes/archie/static/css/dark.css
@@ -4,13 +4,13 @@ body {
 }
 
 ::-moz-selection {
-  background: blue;
+  background: var(--maincolor);
   color: #fff;
   text-shadow: none;
 }
 
 ::selection {
-  background: red;
+  background: var(--maincolor);
   color: #fff;
   text-shadow: none;
 }
