--- a/themes/archie/layouts/partials/header.html
+++ b/themes/archie/layouts/partials/header.html
@@ -57,4 +57,7 @@
 	<script src="{{ $.Site.BaseURL }}{{ . }}"></script>
 	{{- end }}
 	{{- end }}
+	{{- if not hugo.IsServer }}
+	<script defer src="https://analytics.rogs.me/script.js" data-website-id="abe0fc58-9cb6-44d1-9fef-847701bd3651"></script>
+	{{- end }}
 </head>
