Use hugo.IsProduction instead of hugo.IsServer for analytics script
- Replaces the condition checking for development server with production environment check
- Ensures analytics script is only loaded in production builds
- Maintains the same functionality while using the correct Hugo environment variable

--- a/themes/archie/layouts/partials/header.html
+++ b/themes/archie/layouts/partials/header.html
@@ -57,7 +57,7 @@
 	<script src="{{ $.Site.BaseURL }}{{ . }}"></script>
 	{{- end }}
 	{{- end }}
-	{{- if not hugo.IsServer }}
+    {{ if hugo.IsProduction }}
 	<script defer src="https://analytics.rogs.me/script.js" data-website-id="abe0fc58-9cb6-44d1-9fef-847701bd3651"></script>
-	{{- end }}
+	{{ end }}
 </head>
